# Stack_CPP

./: .gitignore  README.md  SNode.hpp  Stack.hpp
tests/: CMakeLists.txt  StackTests.cpp
